gitops/templates/ingress.yaml
# ArgoCD
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-local.kuberstar.com
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`192.168.10.160`) && PathPrefix(`/argo`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: stripprefixregex
          namespace: argocd
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefixregex
  namespace: argocd
spec:
  stripPrefixRegex:
    regex:
      - "/"
---
# Traefik Dashboard
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-local.kuberstar.com
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-local.kuberstar.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
---
# ArgoCD
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-local.kuberstar.com
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana-local.kuberstar.com`)
      services:
        - name: grafana
          port: 80
  tls:
    certResolver: myresolver
---
# Longhorn
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-local.kuberstar.com
  namespace: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn-local.kuberstar.com`)
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: myresolver
---
# Portainer
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-local.kuberstar.com
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`portainer-local.kuberstar.com`)
      services:
        - name: portainer
          port: 9000
  tls:
    certResolver: myresolver
---
# Docker Registry
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-local.kuberstar.com
  namespace: docker-registry
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`docker-registry-local.kuberstar.com`)
      services:
        - name: docker-registry
          port: 5000
      middlewares:
        - name: docker-registry-auth
          namespace: docker-registry
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: docker-registry-auth
  namespace: docker-registry
spec:
  basicAuth:
    secret: docker-registry-auth
